--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <section id="hero">
     <img src="assets/images/me.png" alt="Hello!" style="max-width: 350px; height: auto;" />
     <h2> Alexandra Freeman  </h2>
-    <p> Current Interests: PINNs, Kolmgorov-Arnold Networks, Reinforcement Learning, Multi-Layer Perceptron, ML for protein folding </p>
+    <p> Current Interests: PINNs, Kolmgorov-Arnold Networks, Reinforcement Learning, Multi-Layer Perceptron, Interpretable Artificial Intelligence, Graph Neural Netowrks, ML for protein folding </p>
     <p> <a href="https://sc22.supercomputing.org/presentation/index-477.htm?post_type=page&p=3479&id=svs106&sess=sess280" target="_blank">Click HERE to view my presentation at SC 2022 International Conference for HPC Science Visualization Showcase</a></p>
   </section>
 
