--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <h1>Alexandra Stewart</h1>
+    <h1>Alexandra (Stewart) Freeman</h1>
     <nav>
       <ul>
         <li><a href="#about">About</a></li>
@@ -24,14 +24,14 @@
   </header>
 
   <section id="hero">
-    <img src="assets/images/me.png" alt="Hello!" style="max-width: 350px; height: auto;" />
-    <h2> Alexandra Freeman  </h2>
+    <img src="assets/images/me.png" alt="Hello!" style="max-width: 450px; height: auto;" />
+    <h2> Hello!  </h2>
     <p> Current Interests: PINNs, Kolmgorov-Arnold Networks, Reinforcement Learning, Multi-Layer Perceptron, Interpretable Artificial Intelligence, Graph Neural Netowrks, ML for protein folding </p>
     <p> <a href="https://sc22.supercomputing.org/presentation/index-477.htm?post_type=page&p=3479&id=svs106&sess=sess280" target="_blank">Click HERE to view my presentation at SC 2022 International Conference for HPC Science Visualization Showcase</a></p>
   </section>
 
   <section id="about">
-    <h3>Hello!</h3>
+    <h3>About Me</h3>
   <p></p>
 
 <p> My name is Alexa and I am a recent graduate in Computational Science with an undergraduate degree in physics from MIT. I explored a variety of courses in my undergraduate studies before switching to physics as my primary major in the fields of both Chemistry/Chemical Engineering and Computer science. I was fascinated with the possibility of harnessing compute to advance science fields, and I decided on physics due to my intense curiosity for math, theory, and harnessing theoretical dynamics– which underpin other fields, while maintaining a strong Math/CS background. My interest in ML and computational techniques led me to pursue a masters in Computational Science and Engineering at Georgia Tech. Serving as a teaching assistant, I taught physics courses and tutored students as well as participated in Georgia Tech's Chamber Chorus. </p>
