About me section

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
   </section>
 
   <section id="about">
-    <h3>About Me</h3>
+    <h3>I decided on physics due to my intense curiosity for math, theory, and harnessing theoretical dynamics– which underpin other fields.</h3>
   <p></p>
 
-<p> My name is Alexa and I am a recent graduate in Computational Science with an undergraduate degree in physics from MIT. I explored a variety of courses in my undergraduate studies before switching to physics as my primary major in the fields of both Chemistry/Chemical Engineering and Computer science. I was fascinated with the possibility of harnessing compute to advance science fields, and I decided on physics due to my intense curiosity for math, theory, and harnessing theoretical dynamics– which underpin other fields, while maintaining a strong Math/CS background. My interest in ML and computational techniques led me to pursue a masters in Computational Science and Engineering at Georgia Tech. Serving as a teaching assistant, I taught physics courses and tutored students as well as participated in Georgia Tech's Chamber Chorus. </p>
+<p> My name is Alexa and I am a recent graduate in Computational Science with an undergraduate degree in physics from MIT. I explored a variety of courses in my undergraduate studies before switching to physics in the fields of both Chemical Engineering and Computer Science, while maintaining a strong math background. I was fascinated with the possibility of harnessing compute to advance science fields which led me to pursue a masters in Computational Science and Engineering at Georgia Tech. Serving as a teaching assistant, I taught physics courses and tutored students as well as participated in Georgia Tech's Chamber Chorus. </p>
 
-<p> P.S. I fell in love with <a href="https://web.mit.edu/8.13/www/index.shtml" target="_blank"> J-Lab, the research-intensive 12-unit physics course at MIT</a>. In my free time I sing, compose, play piano, and volunteer.</p>
+<p> P.S. I fell in love with <a href="https://web.mit.edu/8.13/www/index.shtml" target="_blank"> J-Lab, the research-intensive 12-unit physics course at MIT</a>. In my free time I sing, tutor, compose, and volunteer.</p>
   
   
   </section>
