Updated name to Alexandra Freeman
Updated name to Alexandra Freeman on my website

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <h1>Alexandra (Stewart) Freeman</h1>
+    <h1>Alexandra Freeman</h1>
     <nav>
       <ul>
         <li><a href="#about">About</a></li>
