--- a/index.html
+++ b/index.html
@@ -26,15 +26,16 @@
   <section id="hero">
     <img src="assets/images/me.png" alt="Hello!" style="max-width: 550px; height: auto;" />
     <h2> Hello!  </h2>
-    <p> Current Interests: PINNs, Kolmgorov-Arnold Networks, Reinforcement Learning, Multi-Layer Perceptron, Interpretable Artificial Intelligence, Graph Neural Netowrks, ML for protein folding </p>
+    <p> My name is Alexa and I am a recent graduate in Computational Science with an undergraduate degree in physics from MIT. I was fascinated with the possibility of harnessing compute to advance science fields which led me to pursue a masters in Computational Science and Engineering at Georgia Tech. </p>
     <p> <a href="https://sc22.supercomputing.org/presentation/index-477.htm?post_type=page&p=3479&id=svs106&sess=sess280" target="_blank">Click HERE to view my presentation at SC 2022 International Conference for HPC Science Visualization Showcase</a></p>
+    <p> Current Interests: PINNs, Kolmgorov-Arnold Networks, Reinforcement Learning, Multi-Layer Perceptron, Interpretable Artificial Intelligence, Graph Neural Netowrks, ML for protein folding </p>
   </section>
 
   <section id="about">
     <h3>I decided on physics due to my intense curiosity for math, theory, and harnessing theoretical dynamics– which underpin other fields.</h3>
   <p></p>
 
-<p> My name is Alexa and I am a recent graduate in Computational Science with an undergraduate degree in physics from MIT. I explored a variety of courses in my undergraduate studies before switching to physics in the fields of both Chemical Engineering and Computer Science, while maintaining a strong math background. I was fascinated with the possibility of harnessing compute to advance science fields which led me to pursue a masters in Computational Science and Engineering at Georgia Tech. Serving as a teaching assistant, I taught physics courses and tutored students as well as participated in Georgia Tech's Chamber Chorus. </p>
+<p>  I explored a variety of courses in my undergraduate studies before switching to physics in the fields of both Chemical Engineering and Computer Science, while maintaining a strong math background. I decided on physics due to my intense curiosity for math, theory, and harnessing theoretical dynamics– which underpin other fields. I was fascinated with the possibility of harnessing compute to advance science fields which led me to pursue a masters in Computational Science and Engineering at Georgia Tech. Serving as a teaching assistant, I taught physics courses and tutored students as well as participated in Georgia Tech's Chamber Chorus. </p>
 
 <p> P.S. I fell in love with <a href="https://web.mit.edu/8.13/www/index.shtml" target="_blank"> J-Lab, the research-intensive 12-unit physics course at MIT</a>. In my free time I sing, tutor, compose, and volunteer.</p>
   
