--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </header>
 
   <section id="hero">
-    <img src="assets/images/me.png" alt="Hello!" style="max-width: 550px; height: auto;" />
+    <img src="assets/images/hello.JPG" alt="Hello!" style="max-width: 550px; height: auto;" />
     <h2> Hello!  </h2>
     <p> My name is Alexa and I am a recent graduate in Computational Science with an undergraduate degree in physics from MIT. I was fascinated with the possibility of harnessing compute to advance science fields which led me to pursue a masters in Computational Science and Engineering at Georgia Tech. </p>
     <p> <a href="https://sc22.supercomputing.org/presentation/index-477.htm?post_type=page&p=3479&id=svs106&sess=sess280" target="_blank">Click HERE to view my presentation at SC 2022 International Conference for HPC Science Visualization Showcase</a></p>
