--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
   </header>
 
   <section id="hero">
-    <img src="assets/images/mit_logo.png" alt="Massachusetts Institute of Technology" style="max-width: 180px; height: auto;" />
-    <img src="assets/images/gt_logo.png" alt="Georgia Institute of Technology" style="max-width: 180px; height: auto;" />
     <img src="assets/images/hello.JPG" alt="Hello!" style="max-width: 550px; height: auto;" />
     <h2> Hello!  </h2>
     <p> My name is Alexa and I am a recent graduate in Computational Science with an undergraduate degree in physics from MIT. I was fascinated with the possibility of harnessing compute to advance science fields which led me to pursue a masters in Computational Science and Engineering at Georgia Tech. </p>
     <p> <a href="https://sc22.supercomputing.org/presentation/index-477.htm?post_type=page&p=3479&id=svs106&sess=sess280" target="_blank">Click HERE to view my presentation at SC 2022 International Conference for HPC Science Visualization Showcase</a></p>
+    <img src="assets/images/mit_logo.png" alt="Massachusetts Institute of Technology" style="max-width: 180px; height: auto;" />
+    <img src="assets/images/gt_logo.png" alt="Georgia Institute of Technology" style="max-width: 180px; height: auto;" />
+    <img src="assets/images/lanl_logo.png" alt="Los Alamos National Lab" style="max-width: 180px; height: auto;" />
+    <img src="assets/images/sc21.png" alt="International Conference for High Performance Computing" style="max-width: 150px; height: auto;" />
+    <img src="assets/images/sc2s.png" alt="International Conference for High Performance Computing" style="max-width: 150px; height: auto;" />
   </section>
 
   <section id="about">
@@ -40,7 +43,7 @@
 
 <p> P.S. I fell in love with <a href="https://web.mit.edu/8.13/www/index.shtml" target="_blank"> J-Lab, the research-intensive 12-unit physics course at MIT</a>. In my free time I sing, tutor, compose, and volunteer.</p>
   
-<p> Current Interests: PINNs, Kolmgorov-Arnold Networks, Reinforcement Learning, Multi-Layer Perceptron, Interpretable Artificial Intelligence, Graph Neural Netowrks, ML for protein folding </p>
+<p> Current Interests: Statistical Physics, PINNs, Kolmgorov-Arnold Networks, Reinforcement Learning, Quantum Mechanics, Scientific Computing, Graph Neural Netowrks </p>
   </section>
 
   <section id="skills">
