Refine text in the about section of index.html
Updated wording for clarity in the about section.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </section>
 
   <section id="about">
-    <h3>I decided on physics due to my intense curiosity for math, theory, and harnessing theoretical dynamics– which underpin other fields.</h3>
+    <h3>I decided on physics due to my intense curiosity for math, theory, and understanding theoretical dynamics which underpin other fields.</h3>
   <p></p>
 
 <p>  I explored a variety of courses in my undergraduate studies before switching to physics in the fields of both Chemical Engineering and Computer Science, while maintaining a strong math background. I decided on physics due to my intense curiosity for math, theory, and harnessing theoretical dynamics– which underpin other fields. I was fascinated with the possibility of harnessing compute to advance science fields which led me to pursue a masters in Computational Science and Engineering at Georgia Tech. Serving as a teaching assistant, I taught physics courses and tutored students as well as participated in Georgia Tech's Chamber Chorus. </p>
