Update title and header name to 'Alexa Freeman'

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Alexandra Stewart | Computational Physics & ML</title>
+  <title>Alexa (Stewart) Freeman | Computational Physics & ML</title>
   <link rel="stylesheet" href="css/styles.css" />
   <script defer src="js/script.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <h1>Alexandra Freeman</h1>
+    <h1>Alexa Freeman</h1>
     <nav>
       <ul>
         <li><a href="#about">About</a></li>
