--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <img src="assets/images/gt_logo.png" alt="Georgia Institute of Technology" style="max-width: 180px; height: auto;" />
     <img src="assets/images/lanl_logo.png" alt="Los Alamos National Lab" style="max-width: 180px; height: auto;" />
     <img src="assets/images/sc21.png" alt="International Conference for High Performance Computing" style="max-width: 150px; height: auto;" />
-    <img src="assets/images/sc2s.png" alt="International Conference for High Performance Computing" style="max-width: 150px; height: auto;" />
+    <img src="assets/images/sc22.png" alt="International Conference for High Performance Computing" style="max-width: 150px; height: auto;" />
   </section>
 
   <section id="about">
